# DolarBCVWidget

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/dolarbcvwidget/: api.py  date.py  gui.py
